fix: fixing issue with overflow

--- a/src/app/components/task-item/task-item.component.css
+++ b/src/app/components/task-item/task-item.component.css
@@ -31,6 +31,6 @@
 }
 
 .description {
-  overflow: scroll;
+  overflow: auto;
   padding: 10px;
 }
